@@ -21,6 +21,7 @@ Bugs fixed:
 - 1593220 Fixed bug in setQualifier
 - 1598227 Fixed handling of SIGTERM
 - 1193881 Fixed polymorphic enumeration behavior
+- 1601005 Added missing function setHostAndNameSpaceFromObjectPath
 
 Changes in 1.1.1
 ================
