@@ -1,3 +1,8 @@
+2006-11-22  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-50.boeblingen.de.ibm.com>
+
+	* objectpath.c: 
+	Fixed 1601005: added missing function setHostAndNameSpaceFromObjectPath.
+
 2006-11-21  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-50.boeblingen.de.ibm.com>
 
 	* providerDrv.c, providerMgr.c, configure.ac, README: 
